--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+example/
+!example/Stanford_Bunny_sample.stl
+tests/sample.ipynb
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
